--- a/styles.css
+++ b/styles.css
@@ -36,8 +36,8 @@
 .content{
     /* background-color: yellow; */
     display: flex;
-    margin-top: 41px;
-    margin-bottom: 41px;
+    margin-top: 31px;
+    margin-bottom: 64px;
     color: #F9FAF8;
 }
 .content div{
@@ -73,4 +73,41 @@
     justify-content: center;
     align-items: center;
     color: #E5E7EB;
+}
+.mid{
+    display:flex;
+    flex-direction: column;
+}
+.mid-head{
+    display: flex;
+    justify-content: center;
+    font-size: 30px;
+    font-weight: bolder;
+    margin: 30px 0 30px 0;
+}
+.tile-sec{
+    display: flex;
+    justify-content: center;
+    flex:1;
+}
+.tile{
+    padding: 0 15px 0 15px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 160px;
+}
+.tile p{
+    text-align: center;
+    font-weight: 300;
+}
+.tile div{
+    border-style: solid;
+    border-width: 3px;
+    border-color: #3882f6;
+    border-radius: 15px;
+    height: 100px;
+    width: 100px;
+    margin-bottom: 15px;
 }
